--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,31 @@
-apply plugin: 'java-library'
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+
+android {
+    compileSdkVersion 28
+
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 28
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+}
 
 dependencies {
     implementation Dependencies.kotlinStandardLibrary
@@ -15,7 +41,5 @@ dependencies {
     implementation Dependencies.koinAndrodixScope
     // Koin for Unit tests
     testImplementation Dependencies.koinTest
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha01'
 }
-
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
