--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
