--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,6 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: "kotlin-kapt"
 
-apply plugin: 'androidx.navigation.safeargs'
-
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -39,35 +37,9 @@ android {
 dependencies {
     implementation project(":domain")
     implementation project(":data")
+    implementation project(":presentation")
 
     implementation Dependencies.kotlinStandardLibrary
-
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'com.google.android.material:material:1.1.0-alpha07'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-
-    // Navigation
-    implementation Dependencies.navigationFragment
-    implementation Dependencies.navigationFragmentKtx
-    implementation Dependencies.navigationUi
-    implementation Dependencies.navigationUiKtx
-
-    // Kotlin Android Coroutines
-    implementation Dependencies.coroutinesCore
-    implementation Dependencies.coroutinesAndroid
-
-    // ViewModel
-    implementation Dependencies.lifecyleExtensions
-    implementation Dependencies.lifecycleViewModelKtx
-    kapt Dependencies.lifeCycleCompiler
-
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
-
-    // Permissions
-    implementation 'com.karumi:dexter:5.0.0'
 
     // Koin for Kotlin
     implementation Dependencies.koinCore
@@ -79,6 +51,4 @@ dependencies {
     implementation Dependencies.koinAndroidxViewModel
     // Koin for Unit tests
     testImplementation Dependencies.koinTest
-
-    testImplementation 'junit:junit:4.12'
 }
