--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     // ViewModel
     implementation Dependencies.lifecyleExtensions
     implementation Dependencies.lifecycleViewModelKtx
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     kapt Dependencies.lifeCycleCompiler
 
     // Glide
