--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 
     implementation Dependencies.kotlinStandardLibrary
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
