--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.room_version = '2.1.0-beta01'
     ext.junit_version = '4.12'
     ext.mockk_version = '1.9'
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.50'
 
     repositories {
         google()
@@ -16,6 +16,8 @@ buildscript {
         classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // gradle plugin for JUnit5
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.4.2.1"
     }
 }
 
