Continues testing the domain module, adds a new module which can provide mock data to every module that needs the POKO's

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -41,6 +41,8 @@ android {
 dependencies {
     implementation project(":domain")
 
+    testImplementation project(":mockFactory")
+
     implementation Dependencies.kotlinStandardLibrary
 
     // Kotlin Android Coroutines
