--- a/data/build.gradle
+++ b/data/build.gradle
@@ -9,11 +9,11 @@ apply plugin: "kotlin-kapt"
 apply plugin: "de.mannodermaus.android-junit5"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion Dependencies.androidSdkVersion
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion Dependencies.androidSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -77,6 +77,7 @@ dependencies {
 
     implementation Dependencies.coroutinesAndroid
 
+    // Old bluetooth .jar for "accetable" bluetooth api handling
     implementation files('libs/ZSDK_ANDROID_API.jar')
 
 }
