--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion Dependencies.androidSdkVersion
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion Dependencies.androidSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -43,7 +43,7 @@ dependencies {
     implementation Dependencies.koinAndrodixScope
     // Koin for Unit tests
     testImplementation Dependencies.koinTest
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha01'
+    implementation Dependencies.lifeCycleLiveData
 
     // Test
     testImplementation Dependencies.mockK
