--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.room_version = '2.1.0-beta01'
-    ext.junit_version = '4.12'
-    ext.mockk_version = '1.9'
-    ext.kotlin_version = '1.3.50'
-
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0'
+        classpath 'com.android.tools.build:gradle:4.0.0-beta03'
+        classpath Dependencies.kotlinPlugin
+        classpath Dependencies.navigationSafeArgsGradlePlugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         // gradle plugin for JUnit5
