Fixes / removes all todos Fixes crash in history feature, Fixes the issue where you would be able to print a receipt when you don't have a saved bluetooth address Fixes settings crash ( casting from int to string in weird places ) Adds unit tests for GetReceipts.kt

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     testImplementation Dependencies.mockK
     testImplementation Dependencies.coroutinesCore
     testImplementation Dependencies.junitApi
+    testImplementation Dependencies.liveDataTest
 }
