Removes liveData from the domain layer and replaces it with kotlin flow

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     // Room
     implementation Dependencies.roomRuntime
+    implementation Dependencies.roomKtx
     kapt Dependencies.roomCompiler
 
     // Koin for Kotlin
